# mde_ssg

./: .gitignore  .ocamlformat  TODO.md  course_manager.ml  course_manager.opam  dune  dune-project  justfile  list_menu.ml  ssg.ml  tiled.ml
_hooks/: pre-commit
pages/: document.ml  list_menu.ml  readme.md  tiled_menu.ml
static/js/: color_theme.js  environment_selector.js  figure_zoom.js  list_search.js  math_rendering.js  table_of_contents.js
static/styles/: common.css  document.css  environment_selector.css  figure_zoom.css  list.css  table_of_contents.css  tiled.css
templates/: document.html  list.html  tiled.html
utils/: date.ml  debug.ml  fs.ml  metadata.ml  sanitization.ml  static.ml  toml_utils.ml
